[gd_scene load_steps=8 format=3 uid="uid://t5vk8t7idhb8b"]

[ext_resource type="Script" uid="uid://5ohlfr6596xcy" path="res://MainSceneLoader.gd" id="1_1x8vp"]
[ext_resource type="Script" uid="uid://grbx2b0fm4tic" path="res://FirstPersonPlayer.gd" id="2_player"]

[sub_resource type="BoxMesh" id="BoxMesh_1r3n8"]
size = Vector3(50, 0.2, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
transparency = 1
albedo_color = Color(0.8, 0.9, 1, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(50, 0.2, 50)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1s4kx"]
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
height = 1.8

[node name="MainSceneLoader" type="Node3D"]
script = ExtResource("1_1x8vp")

[node name="Environment" type="Node3D" parent="."]

[node name="Floor" type="MeshInstance3D" parent="Environment"]
mesh = SubResource("BoxMesh_1r3n8")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Floor/StaticBody3D"]
shape = SubResource("BoxShape3D_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 5, 0)
shadow_enabled = true

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
script = ExtResource("2_player")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
mesh = SubResource("CapsuleMesh_1s4kx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_1")

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SceneInfo" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -100.0
offset_right = 400.0
offset_bottom = -10.0
grow_vertical = 0
text = "Press 'N' to load next algorithm scene
Current: Main Scene
WASD to move, Mouse to look around"
vertical_alignment = 2

[node name="SceneTitle" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -420.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 0
text = "Main Environment"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="LocationInfo" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -420.0
offset_top = 70.0
offset_right = -20.0
offset_bottom = 150.0
grow_horizontal = 0
text = "Location: Main Scene
Category: Base Environment
Scene: Home"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="PlayerPosition" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -420.0
offset_top = 150.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 0
text = "Player Position: (0, 0, 0)"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="AlgorithmContainer" type="Node3D" parent="."]
